--- a/HelloWeb-1/src/main/webapp/index.html
+++ b/HelloWeb-1/src/main/webapp/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="/object/practice2.js"></script>
+  <script src="/dom/practice.js"></script>
 </head>
 <body>
-  <h1>Git 연습</h1>
+  <h3 id="first">Git 연습</h3>
   <h3>변경이 됐습니다.</h3>
+  <ul>
+    <li class="first">Apple</li>
+    <li class="second">Banana</li>
+    <li class="third">Cherry</li>
+  </ul>
+
+  <input type="text" name="" id="userName" value="Hong">
+  <input type="text" name="" id="userAge" value="20">
+  <button>추가</button>
+  
+  <div id="show">
+    <!-- <div><span>홍길동</span><span>20</span></div> span태그는 div의 자식? -->
+  </div>
   
 </body>
 </html>
