--- a/HelloWeb-1/src/main/webapp/index.html
+++ b/HelloWeb-1/src/main/webapp/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="/dom/practice.js"></script>
+  <script src="/dom/practice3.js"></script>
 </head>
 <body>
   <h3 id="first">Git 연습</h3>
@@ -18,10 +18,13 @@
 
   <input type="text" name="" id="userName" value="Hong">
   <input type="text" name="" id="userAge" value="20">
-  <button>추가</button>
+  <button id="addBtn">추가</button>
   
   <div id="show">
     <!-- <div><span>홍길동</span><span>20</span></div> span태그는 div의 자식? -->
+    <!-- <script>
+  
+    </script> -->
   </div>
   
 </body>
