--- a/0509Practice/src/main/webapp/todoList.html
+++ b/0509Practice/src/main/webapp/todoList.html
@@ -136,11 +136,14 @@ input {
 	</ul>
 
 	<script>
-
+	
+		var todos = [{}, {}]; // (fetch로 데이터를 가져왔다는 뜻) ressult => result.json();
+		// ajax호출
+		
 		// Create a "close" button and append it to each list item
 		var myNodelist = document.getElementsByTagName("LI");
 		var i;
-		for (i = 0; i < myNodelist.length; i++) {
+		for (i = 0; i < myNodelist.length; i++) { // html에서 리스트 불러오기 위한 것. db연동해서 사용할 경우 쓸 필요 x
 			var span = document.createElement("SPAN");
 			var txt = document.createTextNode("\u00D7");
 			span.className = "close";
@@ -162,16 +165,19 @@ input {
 		var list = document.querySelector('ul');
 		list.addEventListener('click', function(ev) {
 			if (ev.target.tagName === 'LI') {
+			// ajax 호출 -> update (변경기능)
 				ev.target.classList.toggle('checked');
 			}
 		}, false);
 
 		// Create a new list item when clicking on the "Add" button
-		function newElement() {
+		function newElement() { // 리스트 만들어줌 + value
+		
+			// ajax 호출 -> 추가
 			var li = document.createElement("li");
 			var inputValue = document.getElementById("myInput").value;
 			var t = document.createTextNode(inputValue);
-			li.appendChild(t);
+			li.appendChild(t); // <li>'myInput.value'</li>
 			if (inputValue === '') {
 				alert("You must write something!");
 			} else {
@@ -189,7 +195,8 @@ input {
 			li.appendChild(span);
 
 			for (i = 0; i < close.length; i++) {
-				close[i].onclick = function() {
+				close[i].onclick = function() { // close이벤트
+					// ajax 호출 -> 삭제기능
 					var div = this.parentElement;
 					div.style.display = "none";
 				}
