--- a/jquery/prac03.html
+++ b/jquery/prac03.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <title>텍스트 추가/검색</title>
     <style>
        #result {
@@ -22,7 +23,6 @@
 
     <script>
       let txtArr = [];
-      var div = document.getElementById("result");
 
       window.onload = function() {
         btnAdd.addEventListener("click", funcAdd)
@@ -33,34 +33,22 @@
 
       function funcAdd() {
         // 텍스트필드에 입력한 값을 배열에 추가하고 배열을 div에 출력
-        var addText = document.getElementById("txtFruit");
-        txtArr.push(addText.value);
-        div.innerHTML = "";
+        txtArr.push($("#txtFruit").val())
+        $("#result").html("")
         for (obj of txtArr) {
-          div.append(obj+", ");
+          $("#result").append(obj+", ")
         }
+
       }
 
       function funcDelete() {
         // 텍스트필드에 입력한 값을 배열에서 삭제하고 배열을 div에 출력
-        var addText = document.getElementById("txtFruit");
-        var search = txtArr.indexOf(addText.value);
-        txtArr.splice(search, 1);
-        div.innerHTML = "";
-        for (obj of txtArr) {
-          div.append(obj+", ");
-        }
+
       }
 
       function funcSearch() {
         // 텍스트필드에 입력한 값을 배열에서 검색해서 검색위치를 div출력
-        var addText = document.getElementById("txtFruit");
-        var search = txtArr.indexOf(addText.value);
-        div.innerHTML = "";
-        for (obj of txtArr) {
-          div.append(obj+", ");
-        }
-        div.append("<br>", "검색위치: "+search);
+
       }
     </script>
 </body>
